--- a/templates/gui.html
+++ b/templates/gui.html
@@ -11,13 +11,13 @@
 		<script src="/static/js/lib/dat.gui.js"></script>
 
 		<!-- my script -->
-		<script src="/static/js/UI.js"></script>
-		<script src="/static/js/render.js"></script>
+		<script src="/static/js/gui.js"></script>
+		<script src="/static/js/viewer.js"></script>
 		<script>
 			//define the params object (from render.js)
 			defineInternalParams();
 			defineExternalParams();
-			createUI();	
+			createGUI();	
 		</script>
 	</body>
 </html>
