--- a/templates/viewer.html
+++ b/templates/viewer.html
@@ -4,7 +4,8 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Three.js Sphere Test</title>
-
+		<script type="text/javascript" src="//code.jquery.com/jquery-1.4.2.min.js"></script>
+		<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.5/socket.io.min.js"></script>
 	</head>
 	<body style="margin:0; padding:0; overflow:hidden">
 
@@ -22,14 +23,14 @@
 		<script src="/static/js/lib/dat.gui.js"></script>
 
 		<!-- my script -->
-		<script src="/static/js/UI.js"></script>
-		<script src="/static/js/render.js"></script>
+		<script src="/static/js/gui.js"></script>
+		<script src="/static/js/viewer.js"></script>
 
 		<script>
 			//called upon loading
 			WebGLStart();
-		</script>
+			connectSocket();
 
-		
+		</script>
 	</body>
 </html>
