--- a/templates/viewer.html
+++ b/templates/viewer.html
@@ -23,13 +23,14 @@
 		<script src="/static/js/lib/dat.gui.js"></script>
 
 		<!-- my script -->
+		<script src="/static/js/utils.js"></script>
 		<script src="/static/js/gui.js"></script>
 		<script src="/static/js/viewer.js"></script>
 
 		<script>
 			//called upon loading
 			WebGLStart();
-			connectSocket();
+			connectSocketInput();
 
 		</script>
 	</body>
