--- a/templates/gui.html
+++ b/templates/gui.html
@@ -3,10 +3,11 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Three.js Sphere GUI Test</title>
-		<script type="text/javascript" src="//code.jquery.com/jquery-1.4.2.min.js"></script>
-		<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.5/socket.io.min.js"></script>
 	</head>
 	<body style="margin:0; padding:0; overflow:hidden">
+
+		<!-- socket.io -->
+		<script src="/static/js/lib/socket.io.min.js"></script>
 
 		<!-- three.js -->
 		<script src="/static/js/lib/three.min.js"></script>
