--- a/templates/viewer.html
+++ b/templates/viewer.html
@@ -4,8 +4,6 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Three.js Sphere Test</title>
-		<script type="text/javascript" src="//code.jquery.com/jquery-1.4.2.min.js"></script>
-		<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.5/socket.io.min.js"></script>
 	</head>
 	<body style="margin:0; padding:0; overflow:hidden">
 
@@ -13,6 +11,8 @@
 		<!-- This will contain the canvas -->
 		<div id="WebGLContainer" ></div>
 
+		<!-- socket.io -->
+		<script src="/static/js/lib/socket.io.min.js"></script>
 
 		<!-- three.js resources -->
 		<script src="/static/js/lib/three.min.js"></script>
