--- a/templates/viewer.html
+++ b/templates/viewer.html
@@ -29,9 +29,8 @@
 
 		<script>
 			//called upon loading
-			WebGLStart();
+			startViewer();
 			connectSocketInput();
-
 		</script>
 	</body>
 </html>
